# moon-lol

./: .cursorrules  .gitignore  .gitmodules  .prettierrc  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  app.manifest  build.rs  docker-compose.yml  init_league_asset.rs  league.rs  package.json  pnpm-lock.yaml  pyproject.toml  ralph.fish  rust-toolchain.toml  stream.html
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/src/: agent.rs  lib.rs  log.rs  main.rs  process.rs  state.rs  tools.rs  ws.rs
crates/league_loader/: Cargo.toml
crates/league_loader/src/: game.rs  lib.rs  map.rs  prop_bin.rs  reader.rs  wad.rs  wad_parse.rs
crates/league_to_lol/: Cargo.toml
crates/league_to_lol/src/: animation.rs  barrack.rs  character.rs  gird.rs  gltf_export.rs  legend.rs  lib.rs  map.rs  mapgeo.rs  mesh_static.rs  navgrid.rs  shader.rs  skin_gltf_export.rs  skin_mesh.rs  sub_mesh.rs  utils.rs
crates/league_to_lol/src/extract/: animation.rs  champion.rs  item.rs  map.rs  mod.rs  skin.rs  spell.rs  ui.rs  utils.rs  vfx.rs
crates/lol_agent/: Cargo.toml
crates/lol_agent/src/: driver.rs  lib.rs  models.rs  params.rs  rl.rs  systems.rs
crates/lol_agent/src/systems/: mod.rs  obs.rs  script.rs
crates/lol_agent/src/tools/: combat.rs  level.rs  mod.rs  movement.rs  prompt.rs
crates/lol_agent_runtime/: Cargo.toml
crates/lol_agent_runtime/src/: credentials.rs  lib.rs  orchestrator.rs  resolver.rs  sink.rs  testing.rs
crates/lol_champions/: Cargo.toml
crates/lol_champions/src/: buffs.rs  lib.rs  test_utils.rs
crates/lol_champions/src/aatrox/: buffs.rs  e.rs  e_tests.rs  mod.rs  p_tests.rs  passive.rs  q.rs  q_tests.rs  r.rs  r_tests.rs  tests.rs  w.rs  w_tests.rs
crates/lol_champions/src/ahri/: buffs.rs  mod.rs
crates/lol_champions/src/akali/: buffs.rs  mod.rs
crates/lol_champions/src/akshan/: buffs.rs  mod.rs
crates/lol_champions/src/alistar/: buffs.rs  mod.rs
crates/lol_champions/src/amumu/: buffs.rs  mod.rs
crates/lol_champions/src/anivia/: buffs.rs  mod.rs
crates/lol_champions/src/annie/: buffs.rs  mod.rs  wiki.md
crates/lol_champions/src/aphelios/: mod.rs
crates/lol_champions/src/ashe/: mod.rs
crates/lol_champions/src/aurora/: buffs.rs  mod.rs
crates/lol_champions/src/bard/: mod.rs
crates/lol_champions/src/belveth/: mod.rs
crates/lol_champions/src/blitzcrank/: buffs.rs  mod.rs
crates/lol_champions/src/brand/: buffs.rs  mod.rs  wiki.md
crates/lol_champions/src/braum/: mod.rs
crates/lol_champions/src/briar/: mod.rs
crates/lol_champions/src/buffs/: aphelios_buffs.rs  ashe_buffs.rs  bard_buffs.rs  belveth_buffs.rs  braum_buffs.rs  briar_buffs.rs  draven_buffs.rs  evelynn_buffs.rs  ezreal_buffs.rs  fiora_passive.rs  fiora_r.rs  galio_buffs.rs  gangplank_buffs.rs  garen_w.rs  graves_buffs.rs  hecarim_buffs.rs  illaoi_buffs.rs  irelia_buffs.rs  ivern_buffs.rs  jarvan_buffs.rs  jax_buffs.rs  jayce_buffs.rs  kaisa_buffs.rs  karma_buffs.rs  kayle_buffs.rs  leblanc_buffs.rs  lucian_buffs.rs  lux_buffs.rs  malzahar_buffs.rs  maokai_buffs.rs  masteryi_buffs.rs  morgana_buffs.rs  nami_buffs.rs  nasus_buffs.rs  olaf_buffs.rs  ornn_buffs.rs  pyke_buffs.rs  qiyana_buffs.rs  quinn_buffs.rs  rakan_buffs.rs  (+24 more)
crates/lol_champions/src/caitlyn/: buffs.rs  mod.rs
crates/lol_champions/src/camille/: buffs.rs  e.rs  e_tests.rs  mod.rs  passive.rs  passive_tests.rs  q.rs  q_tests.rs  r.rs  r_tests.rs  tests.rs  w.rs  w_tests.rs
crates/lol_champions/src/cassiopeia/: buffs.rs  mod.rs
crates/lol_champions/src/champions/: ahri.rs  akali.rs  akshan.rs  alistar.rs  amumu.rs  anivia.rs  annie.rs  aphelios.rs  ashe.rs  aurora.rs  bard.rs  belveth.rs  blitzcrank.rs  brand.rs  braum.rs  briar.rs  caitlyn.rs  cassiopeia.rs  darius.rs  diana.rs  draven.rs  ekko.rs  evelynn.rs  ezreal.rs  fiora.rs  fizz.rs  galio.rs  gangplank.rs  garen.rs  graves.rs  hecarim.rs  heimerdinger.rs  illaoi.rs  irelia.rs  ivern.rs  janna.rs  jarvan.rs  jax.rs  jayce.rs  jinx.rs  (+74 more)
crates/lol_champions/src/darius/: buffs.rs  e.rs  e_tests.rs  history.md  mod.rs  passive.rs  (+8 more)
crates/lol_core/: Cargo.toml
crates/lol_core/src/: action.rs  aggro.rs  animation.rs  attack.rs  attack_auto.rs  base.rs  buffs.rs  character.rs  config.rs  cooldown.rs  damage.rs  entities.rs  error.rs  game.rs  lane.rs  lib.rs  life.rs  lifetime.rs  log.rs  map.rs  match_events.rs  missile.rs  movement.rs  render_cmd.rs  resource.rs  rotate.rs  run.rs  skill.rs  skill_script.rs  skin.rs  team.rs  test_render.rs  utils.rs
crates/lol_debug/: Cargo.toml
crates/lol_debug/src/: handlers.rs  lib.rs  params.rs  protocol.rs  server.rs
crates/lol_game_process_manager/: Cargo.toml
crates/lol_game_process_manager/src/: error.rs  lib.rs  manager.rs  port_pool.rs
crates/lol_loader/: Cargo.toml
crates/lol_loader/src/: animation.rs  barrack.rs  image.rs  lib.rs  mapgeo.rs  mesh.rs  mesh_static.rs  navgrid.rs  property.rs  shader.rs  skeleton.rs
crates/lol_render/: Cargo.toml
crates/lol_render/src/: animation.rs  aoe_visual.rs  camera.rs  controller.rs  cursor.rs  debug_area.rs  debug_missile.rs  debug_sphere.rs  lib.rs  loaders.rs  map.rs  navigation.rs  resource.rs  resource_cache.rs  shader.rs  test_render.rs  ui.rs
crates/lol_web_server/: Cargo.toml
crates/lol_web_server/migrations/: schema.sql
crates/lol_web_server/src/: handlers.rs  interfaces.rs  lib.rs  main.rs  models.rs  services.rs
crates/lol_web_server/tests/: agent_config_repo_test.rs  agent_repo_test.rs  agent_snapshot_repo_test.rs  config_repo_test.rs  essence_repo_test.rs  handler_test.rs  infra_smoke_test.rs  match_repo_test.rs  rank_repo_test.rs  room_repo_test.rs  scenario_repo_test.rs  spawn_preset_repo_test.rs  user_repo_test.rs
rvo2/: Cargo.toml  build.rs
rvo2/src/: lib.rs
rvo2/src/rvo2/: Bridge.cpp  Bridge.h
rvo2/tests/: circle_test.rs
services/rl-trainer/: README.md  pyproject.toml
services/rl-trainer/moonlol_trainer/: __init__.py  __main__.py  checkpoints.py  control_center.py  env.py  rest_server.py  ws_server.py
services/rl-trainer/tests/: test_control_center.py  test_rest_api.py  test_ws_server.py
(+6052 files in other folders)
