[workspace]
members = [
    "crates/*",
]
resolver = "2"

[package]
name = "moon_lol"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bevy_behave.workspace = true
binrw.workspace = true
league_core.workspace = true
league_loader.workspace = true
league_property.workspace = true
league_to_lol.workspace = true
league_file.workspace = true
league_utils.workspace = true
lol_config.workspace = true
lol_core.workspace = true
lol_loader.workspace = true
serde.workspace = true
tokio.workspace = true

bevy_egui = "0.35.1"
rand = "0.9.2"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1"



[workspace.dependencies]
league_core = { path = "crates/league_core" }
league_file = { path = "crates/league_file" }
league_loader = { path = "crates/league_loader" }
league_property = { path = "crates/league_property" }
league_to_lol = { path = "crates/league_to_lol" }
league_utils = { path = "crates/league_utils" }
lol_config = { path = "crates/lol_config" }
lol_core = { path = "crates/lol_core" }
lol_loader = { path = "crates/lol_loader" }

bevy = { version = "0.16.1", features = ["dds", "bevy_picking", "serialize", "shader_format_glsl", "bevy_debug_stepping"] }
bincode = "1.3"
binrw = "0.15.0"
bitflags = "2.9.1"
serde = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
bevy_behave = "0.3.0"

[dev-dependencies]
crossbeam-channel = "0.5"
image = { version = "0.25", features = ["jpeg", "png"] }
tungstenite = "0.23"
rocket = { version = "*", features = ["json"] }
rocket_cors = "0.6"