[workspace]
members = ["crates/*"]
resolver = "2"

[package]
name = "moon_lol"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

[workspace.dependencies]
league_core = { path = "crates/league_core" }
league_file = { path = "crates/league_file" }
league_loader = { path = "crates/league_loader" }
league_property = { path = "crates/league_property" }
league_to_lol = { path = "crates/league_to_lol" }
league_utils = { path = "crates/league_utils" }
lol_base = { path = "crates/lol_base" }
lol_core = { path = "crates/lol_core" }
lol_render = { path = "crates/lol_render" }
lol_champions = { path = "crates/lol_champions" }

gltf = "1.4.1"
bevy_gltf_draco = { path = "../bevy_gltf_draco" }
serde_json = "1.0"
bevy = { path = "../bevy-ktx2", features = [
    "webp",
    "basis_universal",
    "free_camera",
    "serialize",
    "bevy_debug_stepping",
    "webgpu",
] }

bincode = "1.3"
bitflags = "2.9.1"
crossbeam-channel = "0.5"
heck = "0.5.0"
image = { version = "0.25", features = ["png"] }
nom = "8.0.0"
rand = "0.9.2"
regex = "1"
serde = "1.0.219"
thiserror = "2.0.12"
ron = "0.8"
rayon = "1.10"
texpresso = "2.0.2"
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = [
    "wasm_js",
] }
wasm-bindgen = "0.2"

[dependencies]
getrandom_02.workspace = true
getrandom_03.workspace = true
bevy.workspace = true
league_core.workspace = true
league_loader.workspace = true
league_property.workspace = true
league_file.workspace = true
league_utils.workspace = true
lol_base.workspace = true
lol_core.workspace = true
lol_render.workspace = true
lol_champions.workspace = true
serde.workspace = true
rand.workspace = true
bincode.workspace = true
bevy_gltf_draco.workspace = true

tracing = "0.1"

[dev-dependencies]
league_to_lol.workspace = true
crossbeam-channel.workspace = true
image.workspace = true
serde_json.workspace = true
ron.workspace = true

walkdir = "2.5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
rocket = { version = "*", features = ["json"] }
rocket_cors = "0.6"
rayon.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
