[package]
name = "rvo2"
version = "0.1.0"
edition = "2021"
build = "build.rs"
links = "RVO"

[build-dependencies]
cmake = "0.1"
cc = "1.0"

[lib]
name = "rvo2"
crate-type = ["cdylib", "rlib"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "circle_vis"
path = "examples/circle_vis.rs"
