[package]
name = "league_to_lol"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bincode.workspace = true
nom.workspace = true
league_core.workspace = true
league_file.workspace = true
league_loader.workspace = true
league_property.workspace = true
league_utils.workspace = true
lol_config.workspace = true
lol_core.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
