[package]
name = "league_to_lol"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
bincode.workspace = true
nom.workspace = true
ron.workspace = true
league_core.workspace = true
league_file.workspace = true
league_loader.workspace = true
league_property.workspace = true
league_utils.workspace = true
lol_base.workspace = true
lol_core.workspace = true
regex.workspace = true
serde.workspace = true
thiserror.workspace = true
gltf.workspace = true
serde_json.workspace = true
image.workspace = true
texpresso.workspace = true

rayon.workspace = true
