[package]
name = "lol_champions"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
serde.workspace = true
league_utils.workspace = true
league_core.workspace = true
league_file.workspace = true
lol_config.workspace = true
lol_core.workspace = true
rand.workspace = true
lol_loader.workspace = true
