[package]
name = "lol_champions"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
serde.workspace = true
league_utils.workspace = true
league_core.workspace = true
league_file.workspace = true
lol_base.workspace = true
lol_core.workspace = true
rand.workspace = true

[dev-dependencies]
crossbeam-channel.workspace = true
image.workspace = true
serde_json.workspace = true
ron.workspace = true
lol_render.workspace = true
