[package]
name = "lol_debug"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
lol_base.workspace = true
lol_core.workspace = true
lol_champions.workspace = true
lol_render.workspace = true
lol_server.workspace = true
lol_rpc.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
