[package]
name = "lol_loader"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
bincode.workspace = true
binrw.workspace = true
lol_config.workspace = true
league_utils.workspace = true
league_file.workspace = true
league_core.workspace = true
league_property.workspace = true
league_to_lol.workspace = true
thiserror.workspace = true
rayon.workspace = true