[package]
name = "lol_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
bincode.workspace = true
nom.workspace = true
lol_base.workspace = true
league_utils.workspace = true
league_file.workspace = true
league_core.workspace = true
league_property.workspace = true
regex.workspace = true
thiserror.workspace = true
serde.workspace = true
ron.workspace = true
