[package]
name = "lol_render"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy.workspace = true
league_utils.workspace = true
lol_core.workspace = true
serde.workspace = true
crossbeam-channel.workspace = true
image.workspace = true
league_loader.workspace = true
league_file.workspace = true
lol_config.workspace = true
league_core.workspace = true
league_to_lol.workspace = true
thiserror.workspace = true
bincode.workspace = true
regex.workspace = true
rand.workspace = true