[package]
name = "lol_render"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy.workspace = true
league_utils.workspace = true
lol_core.workspace = true
serde.workspace = true
crossbeam-channel.workspace = true
image.workspace = true
league_loader.workspace = true
league_file.workspace = true
lol_base.workspace = true
league_core.workspace = true
thiserror.workspace = true
bincode.workspace = true
regex.workspace = true
rand.workspace = true
