[package]
name = "lol_render"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_gltf_draco.workspace = true
bevy.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
image.workspace = true
league_core.workspace = true
league_file.workspace = true
league_loader.workspace = true
league_utils.workspace = true
lol_base.workspace = true
lol_core.workspace = true
rand.workspace = true
regex.workspace = true
ron.workspace = true
serde.workspace = true
thiserror.workspace = true
