[package]
name = "moon-lol-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "moon_lol_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
thiserror = "2.0.12"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.3", default-features = false, features = [
    "runtime-tokio-native-tls",
    "sqlite",
] }
rig.workspace = true
rig-core.workspace = true
rmcp.workspace = true
lol_client.workspace = true
lol_agent_runtime.workspace = true
async-trait = "0.1"
